--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@constants/*": ["constants/*"],
       "@services/*": ["services/*"],
       "@hooks/*": ["hooks/*"],
+      "@utils/*": ["utils/*"],
       "@types/*": ["types/*"]
     }
   },
