--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^19.1.0",
     "react-final-form": "^7.0.0",
     "react-router-dom": "^6.30.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "vitest": "^3.2.4",
     "zod": "^3.25.67"
   },
@@ -34,6 +36,7 @@
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-react": "^4.4.1",
